# Make coreutils tests for "mv".			-*-Makefile-*-

# Copyright (C) 1998-2008 Free Software Foundation, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

TESTS = \
  atomic2 \
  sticky-to-xpart \
  hard-verbose \
  backup-dir \
  dir2dir \
  no-target-dir \
  atomic \
  acl \
  reply-no \
  leak-fd \
  part-hardlink \
  hard-4 \
  hard-3 \
  hard-2 \
  perm-1 \
  i-link-no \
  part-fail \
  dup-source childproof update mv-special-1 \
  into-self \
  into-self-2 \
  into-self-3 \
  into-self-4 \
  i-1 \
  i-2 \
  i-3 \
  i-4 \
  i-5 \
  backup-is-src \
  hard-link-1 force partition-perm to-symlink dir-file diag \
  part-symlink part-rename trailing-slash

EXTRA_DIST = $(TESTS) vfat

include $(top_srcdir)/tests/check.mk
